# briefing-matinal

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PRD.md  README.md  pyproject.toml
docs/: xai-integration.md
docs/preview/: README.md  sample-matin.html
prompts/: enrich.txt  search_accounts.txt  search_theme.txt  search_web.txt  system.txt
scripts/: build_briefing.py  config.py  dedup.py  enrichment.py  external_sourcing.py  fixture_loader.py  french_quality.py  item_quality.py  models.py  render.py  scoring.py  scrapling_fetcher.py  select.py  sourcing.py  window.py  xai_client.py
sources/: comptes.json  comptes.schema.json  external.json
templates/: briefing.html
templates/partials/: _item.html
tests/: conftest.py  test_dedup.py  test_e2e_offline.py  test_enrichment.py  test_external_sourcing.py  test_french_quality.py  test_issue40_hero_integrity.py  test_prompts_issue38.py  test_render.py  test_resilience_env.py  test_scoring.py  test_scrapling_fetcher.py  test_select.py  test_sourcing.py  test_window.py  test_xai_client.py
tests/fixtures/: sample_matin.json
