[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briefing-matinal"
version = "0.1.0"
description = "Pipeline de briefing matinal personnalisé livré sur Telegram via hermes-agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Christian Boulet" }]
dependencies = [
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.7,<3.0",
    "python-slugify>=8.0,<9.0",
    "jsonschema>=4.22,<5.0",
    "scrapling[fetchers]>=0.4,<1.0",
]

[project.optional-dependencies]
redirector = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-httpx>=0.30,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
